# oura-cli

./: .gitignore  LICENSE  README.md  pyproject.toml
.claude/skills/: oura-sleep.md  oura-training.md
.claude/skills/oura-report/: SKILL.md
.claude/skills/oura-sleep/: SKILL.md
.claude/skills/oura-training/: SKILL.md
.claude/skills/oura-week/: SKILL.md
oura_cli/: __init__.py  auth.py  cli.py  client.py  config.py  formatters.py
